Added data storage of time stamp as object and array.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 	<h1 id="activity">Sleep logger</h1>
-	<p id="time-stamp"></p>
-	<button id="start">Start</button>
+	<p id="time-display"></p>
+	<button id="recorder">Start</button>
 </body>
 <script type="text/javascript" src= "main.js"></script>
 </html>
