--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<h1 id="activity">Sleep logger</h1>
 	<p id="time-display"></p>
 	<button id="recorder">Start</button>
+	<button id="graph">View Data</button>
 </body>
 <script type="text/javascript" src= "main.js"></script>
 </html>
