--- a/index1.html
+++ b/index1.html
@@ -1,18 +1,12 @@
-<!DOCTYPE html>
 <html>
 <head>
-	<title>Sleep logger</title>
+	<title></title>
 	<script type="text/javascript" src="Chart.bundle.js"></script>
 </head>
 <body>
-	<h1 id="activity">Sleep logger</h1>
-	<p id="time-display"></p>
-	<button id="recorder">Start</button>
-	<button id="graph">View Data</button>
 	<canvas id="myChart" width="400" height="400"></canvas>
 	<button id="update">REfresh</button>
 	<button id="adding">ADD</button>
 </body>
-<script type="text/javascript" src= "main.js"></script>
 <script type="text/javascript" src="firstChart.js"></script>
 </html>
