Added persistent localstorage to the app

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<p id="time-display"></p>
 	<button id="recorder">Start</button>
 	<button id="graph">View Data</button>
+	<button id="test">TEST</button>
 	<canvas id="myChart" width="400" height="400"></canvas>
 	<button id="update">REfresh</button>
 	<button id="adding">ADD</button>
