Removing data rewrite on local storage for date

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<h1 id="activity">Sleep logger</h1>
 	<p id="time-display"></p>
-	<button id="recorder">Start</button>
+	<!-- <button id="recorder">Start</button> -->
 	<button id="graph">View Data</button>
 	<button id="test">TEST</button>
 	<canvas id="myChart" width="400" height="400"></canvas>
