--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <html>
 <head>
 	<title>Sleep logger</title>
+	<link rel="stylesheet" type="text/css" href="main.css">
 	<script type="text/javascript" src="Chart.bundle.js"></script>
 </head>
 <body>
 	<h1 id="activity">Sleep logger</h1>
 	<p id="time-display"></p>
 	<!-- <button id="recorder">Start</button> -->
-	<button id="graph">View Data</button>
 	<button id="test">TEST</button>
-	<canvas id="myChart" width="400" height="400"></canvas>
-	<button id="update">REfresh</button>
 	<button id="adding">ADD</button>
+	<!-- <button id="graph">GRAPH</button> -->
+	<!-- <canvas id="myChart" width="400" height="400"></canvas> -->
+	<!-- <button id="update">REfresh</button> -->
+	
 </body>
 <script type="text/javascript" src= "main.js"></script>
 <script type="text/javascript" src="firstChart.js"></script>
