Added: styling for landing page and removed bug that recorded while display button was clicked

--- a/chart-view.html
+++ b/chart-view.html
@@ -2,6 +2,7 @@
 <head>
 	<title></title>
 	<script type="text/javascript" src="Chart.bundle.js"></script>
+	<link rel="stylesheet" type="text/css" href="chart-view.css">
 </head>
 <body>
 	<button id="test">TEST</button>
