--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
 	<script type="text/javascript" src="Chart.bundle.js"></script>
 </head>
 <body>
-	<h1 id="activity">Sleep logger</h1>
-	<p id="time-display"></p>
-	<!-- <button id="recorder">Start</button> -->
-	<button id="test">TEST</button>
-	<button id="adding">ADD</button>
+	<div class="container">
+		<div class="heading">
+			<h1 id="activity">Sleep logger</h1>
+			<p id="time-display"></p>
+		</div>
+		<div class="buttons">
+			<!-- <button id="recorder">Start</button> -->
+			<button id="test">TEST</button>
+			<button id="adding">ADD</button>	
+		</div>
+
+	</div>
 	<!-- <button id="graph">GRAPH</button> -->
 	<!-- <canvas id="myChart" width="400" height="400"></canvas> -->
 	<!-- <button id="update">REfresh</button> -->
