--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 		<div class="buttons">
 			<!-- <button id="recorder">Start</button> -->
 			<button id="test">TEST</button>
-			<button id="adding">ADD</button>	
+			<button id="adding">ADD</button>
+			<button id="back">BACK</button>
 		</div>
-
 	</div>
 	<!-- <button id="graph">GRAPH</button> -->
 	<!-- <canvas id="myChart" width="400" height="400"></canvas> -->
