--- a/wake-view.html
+++ b/wake-view.html
@@ -14,5 +14,5 @@
 	
 </body>
 <script type="text/javascript" src= "main.js"></script>
-<script type="text/javascript" src="finalchart.js"></script>
+<script type="text/javascript" src="wake-view.js"></script>
 </html>
