Seperated three different views and navigation.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 		<div class="buttons">
 			<!-- <button id="recorder">Start</button> -->
 			<button id="test">TEST</button>
-			<button id="adding">ADD</button>
+			<button id="chart-view">CHART VIEW</button>
+			<button id="sleep-view">SLEEP CHART</button>
+			<button id="wake-view">WAKE CHART</button>
 			<button id="back">BACK</button>
 		</div>
 	</div>
@@ -25,4 +27,5 @@
 </body>
 <script type="text/javascript" src= "main.js"></script>
 <script type="text/javascript" src="firstChart.js"></script>
+<script type="text/javascript" src="nav.js"></script>
 </html>
