--- a/sleep-view.html
+++ b/sleep-view.html
@@ -6,13 +6,17 @@
 </head>
 <body>
 	<button id="test">TEST</button>
-	<button id="adding">ADD</button>
-	<button id="back">BACK</button>
+	<button id="chart-view">CHART VIEW</button>
+	<!-- <button id="back">BACK</button> -->
 	<!-- <button id="graph">GRAPH</button> -->
+	<button id="sleep-view">SLEEP CHART</button>
+	<button id="wake-view">WAKE CHART</button>
+	<button id="back">BACK</button>
 	<canvas id="myChart" width="400" height="400"></canvas>
 	<!-- <button id="update">REfresh</button> -->
 	
 </body>
 <script type="text/javascript" src= "main.js"></script>
-<script type="text/javascript" src="finalchart.js"></script>
+<script type="text/javascript" src="sleep-view.js"></script>
+<script type="text/javascript" src="nav.js"></script>
 </html>
