Added total time activity view

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			<button id="chart-view">CHART VIEW</button>
 			<button id="sleep-view">SLEEP CHART</button>
 			<button id="wake-view">WAKE CHART</button>
+			<button id="sleep-time">TOTAL SLEEP TIME</button>
 			<button id="back">BACK</button>
 		</div>
 	</div>
