--- a/sleep-time.html
+++ b/sleep-time.html
@@ -1,22 +1,20 @@
 <html>
 <head>
-	<title></title>
+	<title>Total sleep time</title>
+	<link rel="stylesheet" type="text/css" href="sleep-time.css">
 	<script type="text/javascript" src="Chart.bundle.js"></script>
-	<link rel="stylesheet" type="text/css" href="chart-view.css">
+
 </head>
 <body>
 	<button id="test">TEST</button>
 	<button id="chart-view">CHART VIEW</button>
-	<!-- <button id="back">BACK</button> -->
 	<button id="sleep-view">SLEEP CHART</button>
 	<button id="wake-view">WAKE CHART</button>
 	<button id="sleep-time">TOTAL SLEEP TIME</button>
 	<button id="back">BACK</button>
 	<canvas id="myChart" width="400" height="400"></canvas>
-	<!-- <button id="update">REfresh</button> -->
-	
 </body>
-<script type="text/javascript" src= "main.js"></script>
-<script type="text/javascript" src="finalchart.js"></script>
-<script type="text/javascript" src="nav.js"></script>
+	<script type="text/javascript" src= "main.js"></script>
+	<script type="text/javascript" src="sleep-time.js"></script>
+	<script type="text/javascript" src="nav.js"></script>
 </html>
