--- a/wake-view.html
+++ b/wake-view.html
@@ -11,6 +11,7 @@
 	<!-- <button id="graph">GRAPH</button> -->
 	<button id="sleep-view">SLEEP CHART</button>
 	<button id="wake-view">WAKE CHART</button>
+	<button id="sleep-time">TOTAL SLEEP TIME</button>
 	<button id="back">BACK</button>
 	<canvas id="myChart" width="400" height="400"></canvas>
 	<!-- <button id="update">REfresh</button> -->
